// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render correctly 1`] = `
<div>
  <table
    class="rmd-table"
  >
    <thead
      class="rmd-thead"
    >
      <tr
        class="rmd-tr rmd-tr--bordered"
      >
        <th
          class="rmd-table-cell rmd-table-cell--header rmd-table-cell--no-wrap"
          scope="col"
        >
          Header
        </th>
      </tr>
    </thead>
    <tbody
      class="rmd-tbody"
    >
      <tr
        class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
      >
        <td
          class="rmd-table-cell rmd-table-cell--no-wrap"
        >
          Cell 1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render correctly 2`] = `
<div>
  <table
    class="rmd-table rmd-table--dense"
  >
    <thead
      class="rmd-thead"
    >
      <tr
        class="rmd-tr rmd-tr--bordered"
      >
        <th
          class="rmd-table-cell rmd-table-cell--header rmd-table-cell--right rmd-table-cell--no-wrap"
          scope="col"
        >
          Header
        </th>
      </tr>
    </thead>
    <tbody
      class="rmd-tbody"
    >
      <tr
        class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
      >
        <td
          class="rmd-table-cell rmd-table-cell--right rmd-table-cell--no-wrap"
        >
          Cell 1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render correctly 3`] = `
<div>
  <table
    class="rmd-table"
  >
    <thead
      class="rmd-thead"
    >
      <tr
        class="rmd-tr"
      >
        <th
          class="rmd-table-cell rmd-table-cell--header"
          scope="col"
        >
          Header
        </th>
      </tr>
    </thead>
    <tbody
      class="rmd-tbody"
    >
      <tr
        class="rmd-tr"
      >
        <td
          class="rmd-table-cell"
        >
          Cell 1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render correctly 4`] = `
<div>
  <table
    class="rmd-table rmd-table--full-width"
  >
    <thead
      class="rmd-thead"
    >
      <tr
        class="rmd-tr rmd-tr--bordered"
      >
        <th
          class="rmd-table-cell rmd-table-cell--header rmd-table-cell--top rmd-table-cell--vertical rmd-table-cell--no-wrap"
          scope="col"
        >
          Header
        </th>
      </tr>
    </thead>
    <tbody
      class="rmd-tbody"
    >
      <tr
        class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
      >
        <td
          class="rmd-table-cell rmd-table-cell--top rmd-table-cell--vertical rmd-table-cell--no-wrap"
        >
          Cell 1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render correctly 5`] = `
<div>
  <div
    class="rmd-table-container"
  >
    <table
      class="rmd-table"
    >
      <thead
        class="rmd-thead"
      >
        <tr
          class="rmd-tr rmd-tr--bordered"
        >
          <th
            class="rmd-table-cell rmd-table-cell--header rmd-table-cell--no-wrap"
            scope="col"
          >
            Header
          </th>
        </tr>
      </thead>
      <tbody
        class="rmd-tbody"
      >
        <tr
          class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
        >
          <td
            class="rmd-table-cell rmd-table-cell--no-wrap"
          >
            Cell 1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render correctly 6`] = `
<div>
  <div
    class="rmd-table-container test"
  >
    <table
      class="rmd-table"
    >
      <thead
        class="rmd-thead"
      >
        <tr
          class="rmd-tr rmd-tr--bordered"
        >
          <th
            class="rmd-table-cell rmd-table-cell--header rmd-table-cell--no-wrap"
            scope="col"
          >
            Header
          </th>
        </tr>
      </thead>
      <tbody
        class="rmd-tbody"
      >
        <tr
          class="rmd-tr rmd-tr--bordered rmd-tr--hoverable"
        >
          <td
            class="rmd-table-cell rmd-table-cell--no-wrap"
          >
            Cell 1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
